adding some fixes